# tools

./: .gitattributes  .gitignore  .npmrc  LICENSE  README.en.md  README.md  SECURITY_BEST_PRACTICES_REPORT.md  electron-builder.yml  eslint.config.js  fix_chinese.js  fix_quotes.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.original
.cargo/: config.toml
electron/: logger.ts  main.ts  preload.ts
scripts/: afterPack.js  generate-icon.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: MainLayout.tsx
src/context/: ThemeContext.tsx
src/lib/: tauriAPI.ts
src/tools/: index.tsx  registry.ts
src/tools/common/: GroupManager.tsx  index.ts  types.ts
src/tools/common/components/: BatchMoveModal.tsx  (+4 more)
src/tools/datetime/: DateTimeTool.tsx
src/tools/encoding/: Base64Tool.tsx  EncoderTool.tsx  HexTool.tsx  UnicodeTool.tsx  UrlTool.tsx
src/tools/examples/: README.md  WelcomeTool.tsx
src/tools/filelauncher/: FileLauncherTool.tsx
src/tools/filesearch/: FileSearchTool.tsx
src/tools/network/: HttpTestTool.tsx  IPLookupTool.tsx  NetworkTool.tsx  SubnetConverterTool.tsx
src/tools/security/: PasswordTool.tsx
src/tools/settings/: SettingsTool.tsx
src/tools/system/: ProcessTool.tsx
src/tools/text/: CodeFormatter.tsx  JsonFormatter.tsx  MarkdownPreview.tsx  RegexTool.tsx  XmlFormatter.tsx
src/tools/webopener/: WebOpenerTool.tsx
src/types/: electron.d.ts  index.ts  tauri.d.ts
temp-asar/: package.json
(+7 files in other folders)
